complete enrollment students courses section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="wrapper d-flex">
         <!-- <button id="sidebarToggle" class="btn btn-light d-md-none "><i class="fa-solid fa-bars"></i></button> -->
 
-        <div class="sidebar bg-light d-flex flex-column p-3  align-item-center justify-content-between" id="sidebar">
+        <div class="sidebar bg-light d-flex flex-column p-3  align-item-center justify-content-between " id="sidebar">
+            <!-- <button id="sidebarToggle" class="btn btn-light  position-absolute side-btn"><i class="fa-solid fa-bars"></i></button> -->
             <div>
                 <div class="my-4 d-flex flex-direction-row hide-side">
                     <img src="images/logo.svg" alt="logo">
@@ -41,17 +42,17 @@
 
                     <div class="bg-light p-2 border-0 d-flex align-items-center side">
                         <img src="images/enrollment.svg" alt="enroll" class="me-2" />
-                        <a href="#" class="list-link side-list text-decoration-none hide-side">Enrollment</a>
+                        <a href="enrollment.html" class="list-link side-list text-decoration-none hide-side">Enrollment</a>
                     </div>
 
                     <div class="bg-light p-2 border-0 d-flex align-items-center side">
                         <img src="images/student.svg" alt="student" class="me-2" />
-                        <a href="#" class="list-link side-list text-decoration-none hide-side">Students</a>
+                        <a href="students.html" class="list-link side-list text-decoration-none hide-side">Students</a>
                     </div>
 
                     <div class="bg-light p-2 border-0 d-flex align-items-center side">
                         <img src="images/course.svg" alt="course" class="me-2" />
-                        <a href="#" class="list-link side-list text-decoration-none hide-side">Courses</a>
+                        <a href="courses.html" class="list-link side-list text-decoration-none hide-side">Courses</a>
                     </div>
 
                     <div class="bg-light p-2 border-0 d-flex align-items-center side">
@@ -84,7 +85,7 @@
         <div class="main_content flex-grow-1">
             <nav class="sticky-top w-100">
                 <div class="d-flex flex-row  justify-content-between p-3">
-                    <div class="d-flex flex-column mt-3">
+                    <div class="d-flex flex-column mt-3 left-nav">
                         <p class="text-secondary mb-1">Hello</p>
                         <div class="d-flex flex-row align-items-center ">
                             <h4 class="fw-bold me-2">Luna Maria</h4>
