--- a/profile.html
+++ b/profile.html
@@ -76,7 +76,7 @@
             <div class="bg-light p-2 border-0 d-flex align-items-center side">
               <img src="images/student.svg" alt="student" class="me-2" />
               <a
-                href="#"
+                href="students.html"
                 class="list-link side-list text-decoration-none hide-side"
                 >Students</a
               >
