--- a/test.html
+++ b/test.html
@@ -16,24 +16,27 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
 </head>
 
 <body>
     <div class="wrapper d-flex">
-        <div class="sidebar bg-light d-flex flex-column p-3  align-item-center justify-content-between " id="sidebar">
-            <button id="sidebarToggle" class="btn btn-light "><i class="fa-solid fa-bars"></i></button>
+        <!-- <button id="sidebarToggle" class="btn btn-light d-md-none "><i class="fa-solid fa-bars"></i></button> -->
+
+        <div class="sidebar bg-light d-flex flex-column p-3  align-item-center justify-content-between position-relative" id="sidebar">
+            <button id="sidebarToggle" class="btn btn-light  position-absolute side-btn"><i class="fa-solid fa-bars"></i></button>
+
             <div>
                 <div class="my-4 d-flex flex-row hide-side">
-                    <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
+                    <a href="#"><img src="images/logo.svg" alt="logo"></a>
                     <span class="px-2 py-1 mt-3 ms-2 text-center bg-white shadow shop">Shop</span>
                 </div>
 
                 <div class="d-flex flex-column gap-2">
 
-                    <a href="index.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <div class="bg-light p-2 border-0 d-flex align-items-center side active">
                             <img class="eff me-2" src="images/dashboard.svg" alt="dash" />
                             <span class="list-link side-list hide-side">Dashboard</span>
@@ -41,7 +44,7 @@
                     </a>
 
 
-                    <a href="enrollment.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <div class="bg-light p-2 border-0 d-flex align-items-center side">
                             <img src="images/enrollment.svg" alt="enroll" class="me-2" />
                             <span class="list-link side-list hide-side">Enrollment</span>
@@ -49,7 +52,7 @@
                     </a>
 
 
-                    <a href="students.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <div class="bg-light p-2 border-0 d-flex align-items-center side">
                             <img src="images/student.svg" alt="student" class="me-2" />
                             <span class="list-link side-list hide-side">Students</span>
@@ -57,7 +60,7 @@
                     </a>
 
 
-                    <a href="courses.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <div class="bg-light p-2 border-0 d-flex align-items-center side">
                             <img src="images/course.svg" alt="course" class="me-2" />
                             <span class="list-link side-list hide-side">Courses</span>
@@ -65,7 +68,7 @@
                     </a>
 
 
-                    <a href="balance.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <div class="bg-light p-2 border-0 d-flex align-items-center side">
                             <img src="images/balance.svg" alt="balance" class="me-2" />
                             <span class="list-link side-list hide-side">Balance</span>
@@ -73,7 +76,7 @@
                     </a>
 
 
-                    <a href="profile.html" class="text-decoration-none">
+                    <a href="#" class="text-decoration-none">
                         <div class="bg-light p-2 border-0 d-flex align-items-center side">
                             <img src="images/enrollment.svg" alt="profile" class="me-2" />
                             <span class="list-link side-list hide-side">Profile</span>
@@ -98,10 +101,9 @@
                 </div>
             </div>
         </div>
-
         <div class="main_content flex-grow-1">
-            <nav class="sticky-top w-100 border-btm">
-                <div class="d-flex flex-row align-items-center justify-content-between px-5 py-2 position-relative">
+            <nav class="sticky-top w-100">
+                <div class="d-flex flex-row  justify-content-between p-3">
                     <div class="d-flex flex-column mt-3 left-nav">
                         <p class="text-secondary mb-1">Hello</p>
                         <div class="d-flex flex-row align-items-center ">
@@ -109,7 +111,7 @@
                             <img src="images/hello.svg" alt="hlw">
                         </div>
                     </div>
-                    <div class="m-2 nav-right">
+                    <div class="m-3 nav-right">
                         <div class="d-flex flex-row align-items-center mx-3 my-1">
                             <img src="images/new_admission.svg" alt="addmission">
                             <p class="my-2">New Admission</p>
@@ -122,7 +124,7 @@
                 <div class="mx-5">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                            <div class=" card-1 border-0 ">
+                            <div class="card card-1 border-0 ">
                                 <div class="card-body ">
                                     <img class="p-3 bg-light rounded-circle mb-3" src="images/earning.svg"
                                         alt="course-logo">
@@ -133,7 +135,7 @@
 
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                            <div class=" card-2 border-0">
+                            <div class="card card-2 border-0">
                                 <div class="card-body  rounded-3">
                                     <img class="p-3 bg-light rounded-circle mb-3" src="images/total-students.svg"
                                         alt="course-logo">
@@ -144,7 +146,7 @@
 
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                            <div class=" card-3">
+                            <div class="card card-3">
                                 <div class="card-body rounded-3">
                                     <img class="p-3 bg-light rounded-circle mb-3" src="images/total-courses.svg"
                                         alt="course-logo">
@@ -155,7 +157,7 @@
 
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
-                            <div class=" card-4">
+                            <div class="card card-4">
                                 <div class="card-body rounded-3">
                                     <img class="p-3 bg-light rounded-circle mb-3" src="images/sold-course.svg"
                                         alt="course-logo">
@@ -170,25 +172,25 @@
                 <div class="row">
 
                     <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12 ">
-                        <div class="ms-5 mt-4  border-end">
+                        <div class="ms-5 mt-4 border-end ">
                             <div class="pe-4 ">
                                 <div class="d-flex flex-row justify-content-between">
-                                    <h3 class=" ">Statistics</h3>
+                                    <h5 class="fw-bold stat">Statistics</h5>
                                     <select name="dropdown" id="year" class="px-2 text-secondary drop">
                                         <option value="this-month">This Month</option>
                                         <option value="this-year" selected>This Year</option>
                                     </select>
                                 </div>
-                                <div class="border-every my-4 ">
+                                <div class="border my-4 rounded">
                                     <div id="chart" class="p-3">
                                     </div>
                                 </div>
                             </div>
 
                             <div class="pe-4">
-                                <div class="p-3 bg-light tab">
+                                <div class="p-3 bg-light">
                                     <p>Top 10 Courses</p>
-                                    <table class="w-100 ">
+                                    <table class="w-100">
                                         <thead>
                                             <tr>
                                                 <th>Rank</th>
@@ -265,44 +267,16 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 right ">
-                        <div></div>
-                        <div class="me-lg-5 mt-4 ms-md-5 ms-lg-0 me-md-4 ">
+                    <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 right">
+                        <div class="me-lg-5 mt-4 ms-md-5 ms-lg-0 me-md-4">
                             <div class="d-flex justify-content-between">
                                 <p>New Courses</p>
-                                <p class="enroll">View All</p>
+                                <p>View All</p>
                             </div>
 
                             <div class="row ">
                                 <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
-                                    <div class=" border-every">
-                                        <div class="card-body">
-
-                                            <div
-                                                class="d-flex flex-xl-row flex-sm-row flex-md-column custom-card p-lg-1 p-md-1 p-sm-2">
-                                                <img class="img" src="images/course-thumbnail.svg" alt="thumbnail">
-                                                <div
-                                                    class="d-flex flex-column ms-1 align-items-md-center text-xl-start">
-                                                    <p class="text-md-center text-xl-start">Advance UI UX Design Course
-                                                    </p>
-                                                    <p class="text-secondary sub-text">Jhankar Mahbub</p>
-                                                    <div>
-                                                        <img src="images/clock.svg" alt="clock">
-                                                        <span class="text-secondary sub-text">12h 20m</span>
-
-
-                                                        <img src="images/video.svg" alt="clock">
-                                                        <span class="text-secondary sub-text">12h 20m</span>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
-                                    <div class=border-every>
+                                    <div class="card">
                                         <div class="card-body">
 
                                             <div
@@ -329,7 +303,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
-                                    <div class=border-every>
+                                    <div class="card">
                                         <div class="card-body">
 
                                             <div
@@ -356,7 +330,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
-                                    <div class=border-every>
+                                    <div class="card">
                                         <div class="card-body">
 
                                             <div
@@ -383,7 +357,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
-                                    <div class=border-every>
+                                    <div class="card">
                                         <div class="card-body">
 
                                             <div
@@ -410,7 +384,34 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
-                                    <div class=border-every>
+                                    <div class="card">
+                                        <div class="card-body">
+
+                                            <div
+                                                class="d-flex flex-xl-row flex-sm-row flex-md-column custom-card p-lg-1 p-md-1 p-sm-2">
+                                                <img src="images/course-thumbnail.svg" alt="thumbnail">
+                                                <div
+                                                    class="d-flex flex-column ms-1 align-items-md-center text-xl-start">
+                                                    <p class="text-md-center text-xl-start">Advance UI UX Design Course
+                                                    </p>
+                                                    <p class="text-secondary sub-text">Jhankar Mahbub</p>
+                                                    <div>
+                                                        <img src="images/clock.svg" alt="clock">
+                                                        <span class="text-secondary sub-text">12h 20m</span>
+
+
+                                                        <img src="images/video.svg" alt="clock">
+                                                        <span class="text-secondary sub-text">12h 20m</span>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xl-12 col-lg-6 col-md-6 col-sm-6 mb-2">
+                                    <div class="card">
                                         <div class="card-body">
 
                                             <div
@@ -439,7 +440,7 @@
 
 
                                 <!-- <div class="col-lg-12 col-md-6 col-sm-12 mb-2">
-                                        <div class= border-every>
+                                        <div class="card">
                                     <div class="card-body">
                                         <div class="row ">
                                             <div class="col-lg-4 col-md-4 col-sm-4">
@@ -483,7 +484,7 @@
 
         <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
         <!-- <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script> -->
-        <script src="index.js"></script>
+        <script src="test.js"></script>
 
 </body>
 
