--- a/balance.html
+++ b/balance.html
@@ -109,10 +109,12 @@
                         <p class="mt-2 fs-5">Balance</p>
                     </div>
                     <div class="m-2 nav-right">
-                        <div class="d-flex flex-row align-items-center mx-3 my-1">
+                        <a href="new-admission.html " class="text-decoration-none text-white">
+                            <div class="d-flex align-items-center mx-3 my-1">
                             <img src="images/new_admission.svg" alt="addmission">
                             <p class="my-2">New Admission</p>
                         </div>
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -120,9 +122,9 @@
             <div class="body pt-4">
                 <div class="row">
 
-                    <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12 ">
+                    <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12">
                         <div class="ms-5 mt-4 me-4 ">
-                            <div class="pe-4 bg-light">
+                            <div class="pe-4 bg-light tab">
                                 <div class="d-flex flex-row justify-content-between ps-4 pt-4">
                                     <h3 class=" stat ">Sale Overview</h3>
                                     <select name="dropdown" id="year" class="px-2  drop">
@@ -143,8 +145,8 @@
 
                                     </div>
                                     <table class="w-100">
-                                        <thead>
-                                            <tr>
+                                        <thead class="">
+                                            <tr class="tab-head">
                                                 <th>Date</th>
                                                 <th>Txn. ID </th>
                                                 <th>Name</th>
@@ -226,14 +228,14 @@
                                     <p class="">4/19</p>
                                 </div>
                             </div>
-                            <div class="d-flex flex-column p-4 mb-3 border shadow wallet2">
+                            <div class="d-flex flex-column p-4 mb-3 card-bdr shadow-btm wallet2">
                                 <div class="d-flex justify-content-between">
                                     <p class="text-secondary para">Today's Sale</p>
                                     <p class="grow-up px-2  "><i class="fa-solid fa-arrow-trend-up"></i> +10.25%</p>
                                 </div>
                                 <h3>€1,265.75</h3>
                             </div>
-                            <div class="d-flex flex-column p-4 mb-3 border shadow wallet2">
+                            <div class="d-flex flex-column p-4 mb-3 card-bdr shadow-btm  wallet2">
                                 <div class="d-flex justify-content-between">
                                     <p class="text-secondary para">Last Month Sale</p>
                                     <p class="grow-up grow-down text-danger px-2  "><i
@@ -241,7 +243,7 @@
                                 </div>
                                 <h3>€4,267.55</h3>
                             </div>
-                            <div class="d-flex flex-column p-4 mb-3 border shadow wallet2">
+                            <div class="d-flex flex-column p-4 mb-3 card-bdr shadow-btm  wallet2">
                                 <p class="text-secondary para">Last Withdrawn</p>
                                 <h3>€2,900.00</h3>
                             </div>
