--- a/courses.html
+++ b/courses.html
@@ -106,10 +106,12 @@
                         <p class="mt-2 fs-5">Courses</p>
                     </div>
                     <div class="m-2 nav-right">
-                        <div class="d-flex flex-row align-items-center mx-3 my-1">
+                       <a href="new-admission.html " class="text-decoration-none text-white">
+                            <div class="d-flex align-items-center mx-3 my-1">
                             <img src="images/new_admission.svg" alt="addmission">
                             <p class="my-2">New Admission</p>
                         </div>
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -123,18 +125,18 @@
                         </div>
 
                         <div class=" flex-grow-1 text-center all hvr">
-                            <select class="sort-dropdown p-3 ">
+                            <select class="sort-dropdown p-3 bg-light ">
                                 <option selected>All</option>
                             </select>
                         </div>
 
                     </div>
 
-                    <div class="bg-light p-4 mt-4">
+                    <div class="bg-light p-4 mt-4 tab">
 
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect">
-                            <div class="div-1  flex-grow-1 card-bg rounded">
-                                <div class="d-flex flex-column gap-2 div-in-1 mx-3">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect tab">
+                            <div class="div-1  flex-grow-1 card-bg p-tab">
+                                <div class="d-flex flex-column gap-2 div-in-1 mx-3 ">
                                     <p class="sub-text mb-1 mt-3"> IT and Technology</p>
                                     <p class="fw-bold text-white mb-1">Advance UI UX Course</p>
                                     <p class="text-white mb-2">Jhankar Mahbub</p>
@@ -160,9 +162,9 @@
                                 Enroll<i class="fa-solid fa-arrow-right ms-2"></i>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect">
-                            <div class="div-1  flex-grow-1 card-bg rounded">
-                                <div class="d-flex flex-column gap-2 div-in-1 mx-3">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect tab">
+                            <div class="div-1  flex-grow-1 card-bg p-tab">
+                                <div class="d-flex flex-column gap-2 div-in-1 mx-3 ">
                                     <p class="sub-text mb-1 mt-3"> IT and Technology</p>
                                     <p class="fw-bold text-white mb-1">Advance UI UX Course</p>
                                     <p class="text-white mb-2">Jhankar Mahbub</p>
@@ -188,9 +190,9 @@
                                 Enroll<i class="fa-solid fa-arrow-right ms-2"></i>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect">
-                            <div class="div-1  flex-grow-1 card-bg rounded">
-                                <div class="d-flex flex-column gap-2 div-in-1 mx-3">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect tab">
+                            <div class="div-1  flex-grow-1 card-bg p-tab">
+                                <div class="d-flex flex-column gap-2 div-in-1 mx-3 ">
                                     <p class="sub-text mb-1 mt-3"> IT and Technology</p>
                                     <p class="fw-bold text-white mb-1">Advance UI UX Course</p>
                                     <p class="text-white mb-2">Jhankar Mahbub</p>
@@ -216,9 +218,9 @@
                                 Enroll<i class="fa-solid fa-arrow-right ms-2"></i>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect">
-                            <div class="div-1  flex-grow-1 card-bg rounded">
-                                <div class="d-flex flex-column gap-2 div-in-1 mx-3">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect tab">
+                            <div class="div-1  flex-grow-1 card-bg p-tab">
+                                <div class="d-flex flex-column gap-2 div-in-1 mx-3 ">
                                     <p class="sub-text mb-1 mt-3"> IT and Technology</p>
                                     <p class="fw-bold text-white mb-1">Advance UI UX Course</p>
                                     <p class="text-white mb-2">Jhankar Mahbub</p>
@@ -244,9 +246,9 @@
                                 Enroll<i class="fa-solid fa-arrow-right ms-2"></i>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect">
-                            <div class="div-1  flex-grow-1 card-bg rounded">
-                                <div class="d-flex flex-column gap-2 div-in-1 mx-3">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect tab">
+                            <div class="div-1  flex-grow-1 card-bg p-tab">
+                                <div class="d-flex flex-column gap-2 div-in-1 mx-3 ">
                                     <p class="sub-text mb-1 mt-3"> IT and Technology</p>
                                     <p class="fw-bold text-white mb-1">Advance UI UX Course</p>
                                     <p class="text-white mb-2">Jhankar Mahbub</p>
@@ -272,9 +274,9 @@
                                 Enroll<i class="fa-solid fa-arrow-right ms-2"></i>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect">
-                            <div class="div-1  flex-grow-1 card-bg rounded">
-                                <div class="d-flex flex-column gap-2 div-in-1 mx-3">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-3 mb-3 effect tab">
+                            <div class="div-1  flex-grow-1 card-bg p-tab">
+                                <div class="d-flex flex-column gap-2 div-in-1 mx-3 ">
                                     <p class="sub-text mb-1 mt-3"> IT and Technology</p>
                                     <p class="fw-bold text-white mb-1">Advance UI UX Course</p>
                                     <p class="text-white mb-2">Jhankar Mahbub</p>
@@ -300,7 +302,7 @@
                                 Enroll<i class="fa-solid fa-arrow-right ms-2"></i>
                             </div>
                         </div>
-
+                       
 
 
                     </div>
