--- a/profile.html
+++ b/profile.html
@@ -143,51 +143,51 @@
                   <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12">
                       <div>
-                        <p class="text-secondary mb-1">Fiscal Code(CF)</p>
-                        <p class="">HWLPSH90E31Z249J</p>
+                        <p class="text-secondary mb-1 title-txt">Fiscal Code(CF)</p>
+                        <p class="title-txt">HWLPSH90E31Z249J</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Date of Birth</p>
-                        <p>12/03/1998</p>
+                        <p class="text-secondary mb-1 title-txt">Date of Birth</p>
+                        <p class="title-txt">12/03/1998</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">City of Birth</p>
-                        <p>Sestola</p>
+                        <p class="text-secondary mb-1 title-txt">City of Birth</p>
+                        <p class="title-txt">Sestola</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Telephone Number</p>
-                        <p>+16032435496</p>
+                        <p class="text-secondary mb-1 title-txt">Telephone Number</p>
+                        <p class="title-txt">+16032435496</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Email</p>
-                        <p>hannan@gmail.com</p>
+                        <p class="text-secondary mb-1 title-txt">Email</p>
+                        <p class="title-txt">hannan@gmail.com</p>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                       <div>
-                        <p class="text-secondary mb-1">Gender</p>
-                        <p>Male</p>
+                        <p class="text-secondary mb-1 title-txt">Gender</p>
+                        <p class="title-txt">Male</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Province of Birth</p>
-                        <p>Modena</p>
+                        <p class="text-secondary mb-1 title-txt">Province of Birth</p>
+                        <p class="title-txt">Modena</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Citizenship</p>
-                        <p>Gibuti</p>
+                        <p class="text-secondary mb-1 title-txt">Citizenship</p>
+                        <p class="title-txt">Gibuti</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Mobile Number</p>
-                        <p>+16032435496</p>
+                        <p class="text-secondary mb-1 title-txt">Mobile Number</p>
+                        <p class="title-txt">+16032435496</p>
                       </div>
                     </div>
                   </div>
 
                   <div>
-                    <p class="sub-text text-info">Address Information</p>
+                    <p class="sub-text teal mt-3">Address Information</p>
                     <div>
-                      <p class="text-secondary mb-1">Address</p>
-                      <p>
+                      <p class="text-secondary mb-1 title-txt">Address</p>
+                      <p class="title-txt">
                         86737 Steuber Crescent Suite 012 New Mozelle, UT
                         00442-8898
                       </p>
@@ -195,20 +195,20 @@
                     <div class="row">
                       <div class="col-lg-6 col-md-6 col-sm-12">
                         <div>
-                          <p class="text-secondary mb-1">
+                          <p class="text-secondary mb-1 title-txt">
                             Province of Residence
                           </p>
                           <p class="">Asti</p>
                         </div>
                         <div>
-                          <p class="text-secondary mb-1">Postal Code</p>
-                          <p>82458-2430</p>
+                          <p class="text-secondary mb-1 title-txt">Postal Code</p>
+                          <p class="title-txt">82458-2430</p>
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-6 col-sm-12">
                         <div>
-                          <p class="text-secondary mb-1">City of Residence</p>
-                          <p>Portacomaro</p>
+                          <p class="text-secondary mb-1 title-txt">City of Residence</p>
+                          <p class="title-txt">Portacomaro</p>
                         </div>
                       </div>
                     </div>
@@ -226,56 +226,56 @@
                   <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12">
                       <div>
-                        <p class="text-secondary mb-1">Company Name</p>
-                        <p class="">Lubowitz, Purdy and Hansen</p>
+                        <p class="text-secondary title-txt mb-1">Company Name</p>
+                        <p class="title-txt">Lubowitz, Purdy</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Vat ID</p>
-                        <p>29312177</p>
+                        <p class="text-secondary mb-1 title-txt">Vat ID</p>
+                        <p class="title-txt">29312177</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">
+                        <p class="text-secondary mb-1 title-txt">
                           Business Mobile Phone
                         </p>
-                        <p>+13084563276</p>
+                        <p class="title-txt">+13084563276</p>
                       </div>
 
                       <div class="target">
-                        <p class="text-secondary mb-1">Vat ID</p>
-                        <p>29312177</p>
+                        <p class="text-secondary mb-1 title-txt">Vat ID</p>
+                        <p class="title-txt">29312177</p>
                       </div>
                       <div class="target">
-                        <p class="text-secondary mb-1">
-                          Business Mobile Phone
+                        <p class="text-secondary mb-1 title-txt">
+                          Bsns Phn
                         </p>
-                        <p>+13084563276</p>
+                        <p class="title-txt">+13084563276</p>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                       <div>
-                        <p class="text-secondary mb-1">Company Type</p>
-                        <p>Individual firm</p>
+                        <p class="text-secondary mb-1 title-txt">Company Type</p>
+                        <p class="title-txt">Individual firm</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Business Phone</p>
-                        <p>+17864160963</p>
+                        <p class="text-secondary mb-1 title-txt">Business Phone</p>
+                        <p class="title-txt">+17864160963</p>
                       </div>
                       <div>
-                        <p class="text-secondary mb-1">Business Email</p>
-                        <p>mkoepp@gmail.com</p>
+                        <p class="text-secondary mb-1 title-txt">Business Email</p>
+                        <p class="title-txt">mkoepp@gmail.com</p>
                       </div>
                       <div class="target">
-                        <p class="text-secondary mb-1">Mobile Number</p>
-                        <p>+16032435496</p>
+                        <p class="text-secondary mb-1 title-txt">Mobile </p>
+                        <p class="title-txt">+16032435496</p>
                       </div>
                     </div>
                   </div>
 
                   <div>
-                    <p class="sub-text text-info">Address Information</p>
+                    <p class="sub-text mt-3 teal">Address Information</p>
                     <div>
-                      <p class="text-secondary mb-1">Address</p>
-                      <p>
+                      <p class="text-secondary mb-1 title-txt">Address</p>
+                      <p class="title-txt">
                         86737 Steuber Crescent Suite 012 New Mozelle, UT
                         00442-8898
                       </p>
@@ -283,20 +283,20 @@
                     <div class="row">
                       <div class="col-lg-6 col-md-6 col-sm-12">
                         <div>
-                          <p class="text-secondary mb-1">
+                          <p class="text-secondary mb-1 title-txt">
                             Province of Residence
                           </p>
-                          <p class="">Asti</p>
+                          <p class="title-txt">Asti</p>
                         </div>
                         <div>
-                          <p class="text-secondary mb-1">Postal Code</p>
-                          <p>82458-2430</p>
+                          <p class="text-secondary mb-1 title-txt">Postal Code</p>
+                          <p class="title-txt">82458-2430</p>
                         </div>
                       </div>
                       <div class="col-lg-6 col-md-6 col-sm-12">
                         <div>
-                          <p class="text-secondary mb-1">City of Residence</p>
-                          <p>Portacomaro</p>
+                          <p class="text-secondary mb-1 title-txt">City of Residence</p>
+                          <p class="title-txt">Portacomaro</p>
                         </div>
                       </div>
                     </div>
