--- a/students.html
+++ b/students.html
@@ -106,10 +106,12 @@
                         <p class="mt-2 fs-5">Students</p>
                     </div>
                     <div class="m-2 nav-right">
-                        <div class="d-flex flex-row align-items-center mx-3 my-1">
+<a href="new-admission.html " class="text-decoration-none text-white">
+                            <div class="d-flex align-items-center mx-3 my-1">
                             <img src="images/new_admission.svg" alt="addmission">
                             <p class="my-2">New Admission</p>
                         </div>
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -128,8 +130,8 @@
                         </div>
                     </div>
 
-                    <div class="bg-light p-4 mt-4">
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                    <div class="bg-light p-4 mt-4 tab">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -158,7 +160,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -187,7 +189,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -216,7 +218,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -245,7 +247,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -274,7 +276,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -303,7 +305,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -332,7 +334,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -361,7 +363,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -390,7 +392,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
@@ -419,7 +421,7 @@
                             </div>
 
                         </div>
-                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect">
+                        <div class="d-flex flex-wrap bg-white p-3 align-items-center gap-2 mb-3 effect p-tab">
                             <div class="div-1  flex-grow-1  ">
                                 <div class="d-flex gap-2 align-items-center div-in-1">
                                     <img class="male" src="images/GenderMale.png" alt="gender">
